# legion

./: .travis.yml
examples/full_circuit/: circuit_mapper.h
runtime/: CMakeLists.txt  runtime.mk
runtime/legion/: legion_c.cc  legion_c.h  legion_c_util.h  legion_config.h  legion_profiling.h  legion_spy.h  legion_types.h  runtime.cc
runtime/legion/lowlevel/: lowlevel.h
runtime/legion/mappers/: default_mapper.cc  default_mapper.h  mapping_utilities.h  replay_mapper.cc  replay_mapper.h  shim_mapper.cc  shim_mapper.h  test_mapper.h  wrapper_mapper.h
runtime/legion/realm/: custom_serdez.h  event.h  event_impl.h  idx_impl.h  indexspace.h  inst_impl.h  instance.h  logging.cc  machine.h  machine_impl.cc  machine_impl.h  mem_impl.h  memory.h  metadata.h  module.cc  nodeset.h  operation.h  proc_impl.h  processor.h  profiling.inl  realm.h  redop.h  reservation.h  rsrv_impl.h  runtime.h  runtime_impl.cc  runtime_impl.h  sampling.h  threads.h  timers.h
runtime/legion/realm/llvmjit/: llvmjit.h  llvmjit_internal.cc  llvmjit_internal.h  llvmjit_module.cc  llvmjit_module.h
runtime/legion/realm/numa/: numa_module.cc  numa_module.h
runtime/legion/realm/procset/: procset_module.cc  procset_module.h
